# qr_trees

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
results/diffdrive/: argmax_states.csv  has_obs_hindsight_75-25_states.csv  has_obs_hindsight_90-10_states.csv  has_obs_weighted_90-10_states.csv  hindsight_10-90_states.csv  hindsight_25-75_states.csv  hindsight_50-50_states.csv  ilqr_true_states.csv  no_obs_hindsight_10-90_states.csv  no_obs_ilqr_true_states.csv  no_obs_obstacles.csv  no_obs_weighted_10-90_states.csv  no_obs_weighted_25-75_states.csv  no_obs_weighted_50-50_states.csv  no_obs_weighted_75-25_states.csv  obstacles.csv
results/diffdrive/vs_weighted/: hind1_obstacles.csv  hind2_hindsight_50-50_states.csv  hind2_obstacles.csv  true1_ilqr_true_states.csv  true2_ilqr_true_states.csv  weight1_weighted_50-50_states.csv  weight4_weighted_50-50_states.csv
src/: CMakeLists.txt  test.cc
src/experiments/: CMakeLists.txt  circle_pusher.cc  circle_pusher.hh  ilqr_hindsight_diffdrive.cc  ilqr_templated_diffdrive.cc  ilqr_templated_pendulum.cc  ilqr_tree_pendulum.cc  run_shared_autonomy_circle.cc  run_single_obs_diffdrive.cc  shared_autonomy_circle.cc  shared_autonomy_circle.hh  shared_autonomy_circle_class.cc  shared_autonomy_circle_class.hh  single_obs_circle_world.cc  single_obs_diffdrive.cc  single_obs_diffdrive.hh
src/experiments/simulators/: CMakeLists.txt  circle_world.cc  circle_world.hh  diffdrive.cc  diffdrive.hh  directdrive.cc  directdrive.hh  objects.cc  objects.hh  pendulum.cc  pendulum.hh  pusher.cc  pusher.hh  simplecar.cc  simplecar.hh  simulator_utils.cc  simulator_utils.hh  user_goal.cc  user_goal.hh
src/filters/: discrete_filter.hh  discrete_filter_imp.hh  goal_predictor.hh  goal_predictor_imp.hh
src/ilqr/: CMakeLists.txt  iLQR.cc  iLQR.hh  ilqr.cc  ilqr.hh  ilqr_helpers.cc  ilqr_helpers.hh  ilqr_node.cc  ilqr_node.hh  ilqr_taylor_expansions.cc  ilqr_taylor_expansions.hh  ilqr_tree.cc  ilqr_tree.hh  ilqrtree_helpers.cc  ilqrtree_helpers.hh  mpc_tree_policies.cc  mpc_tree_policies.hh  tree.hh  types.cc  types.hh
src/lqr/: CMakeLists.txt  LQR.cc  LQR.hh  lqr_tree.cc  lqr_tree.hh  lqr_types.cc  lqr_types.hh
src/pybind/: CMakeLists.txt  bind_test.cc  circle_world_bindings.hh  ilqr_diffdrive.cc  pusher_world.cc  shared_autonomy_circle_bindings.cc  shared_autonomy_circle_class_bindings.cc  sim_objects.cc
src/python/: ilqr.py  lqr.py  run_ilqr_diffdrive.py  run_shared_autonomy_circle.py  test_ilqr.py  test_pusher_world.py  visualize_circle_world.py
src/python/vis/: true_ilqr_states.csv  visualize_circle_world.py
src/templated/: iLQR.hh  iLQR_hindsight.hh  iLQR_hindsight_impl.hh  iLQR_hindsight_value.hh  iLQR_hindsight_value_impl.hh  iLQR_impl.hh  taylor_expansion.hh
src/test/: CMakeLists.txt  helpers.cc  helpers.hh  test_as_lqr.cc  test_discrete_filter.cc  test_goal_predictor.cc  test_ilqr_as_lqr.cc  test_ilqr_chain.cc  test_ilqr_hindsight_vs_ilqr.cc  test_ilqr_taylor_expansions.cc  test_ilqr_templated.cc  test_ilqr_templated.hh  test_ilqrtree_as_lqr.cc  test_lqr_tree.cc  test_math.cc  test_multivariate_gaussian.cc  test_tree.cc
src/utils/: CMakeLists.txt  MultivariateGaussian.hpp  debug_utils.hh  helpers.cc  helpers.hh  math_utils.cc  math_utils.hh  math_utils_temp.hh  multivariate_gaussian.cc  multivariate_gaussian.hh  print_helpers.hh
